# AutoSM

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  requirement.txt  requirements.txt  temp_gpt_core.py  webpack.config.js
ComplementaryExperiments/: README.md
ComplementaryExperiments/src/: .cabal  Compiler.hi  Compiler.hs  README  anb.hi  anb.hs
ComplementaryExperiments/src/Checker/: CaseInsensitivity.hi  CaseInsensitivity.hs  CheckResult.hi  CheckResult.hs  Checker.hi  Checker.hs
ComplementaryExperiments/src/Parser/: Basic.hi  Basic.hs  Message.hi  Message.hs  ParseTree.hi  ParseTree.hs  ProtocolParser.hi  ProtocolParser.hs
ComplementaryExperiments/src/Rewriter/: Functions.hi  Functions.hs  FunctionsStateless.hi  FunctionsStateless.hs  IR.hi  IR.hs  MessageModel.hi  MessageModel.hs  Rewriter.hi  Rewriter.hs  State.hi  State.hs
ComplementaryExperiments/src/Test/: Message.hs  MessageModel.hs  Parser.hs  Tests.hs
ComplementaryExperiments/src/Translator/: Auxiliary.hi  Auxiliary.hs  Printer.hi  Printer.hs  State.hi  State.hs  Translator.hi  Translator.hs
ComplementaryExperiments/src/protocols/extra/: dh_alternative.anb  dh_alternative.spthy  or.anb  or.spthy  signed_dh.anb  signed_dh.spthy
ComplementaryExperiments/src/protocols/thesis/: asw.anb  asw.spthy  asym.anb  asym.spthy  cr.anb  cr.spthy  dh.anb  dh.spthy  fail_checks.anb  ir_cr.hs
Input_output/: README.md
benchmark/: Denning_Sacco_verified.spthy  EDHOC.spthy  LAK06_verified.spthy  WooLamPi_f_verified.spthy  X509_1_verified.spthy  Yahalom_verified.spthy  client_session_key.aes  (+9 more)
(+303 files in other folders)
