name:                your-project
version:             0.1.0.0
synopsis:            A short description of your project
description:         A longer description of your project
homepage:            http://example.com
license:             MIT
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Web

build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Parser.Message
  build-depends:       base >=4.7 && <5, containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable your-executable
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5, containers
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite your-project-test
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  build-depends:       base >=4.7 && <5, containers, HUnit
  hs-source-dirs:      test
  default-language:    Haskell2010
